--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,42 +1,44 @@
-.hero-banner{
+/* .hero-banner{
     
     display: flex;
     align-items: center;
     gap: 4rem;
     /* justify-content: space-between; */
-    align-items: center;
+    /* align-items: center;
     border-top: 1px solid #DCD8EE;
     padding: 1rem 5rem 1rem 5rem;
     border-bottom: 1px solid #DCD8EE;
     
+} */ 
+.hero-banner-wrapper{
+    border-top: 1px solid #DCD8EE;
+    border-bottom: 1px solid #DCD8EE;
 }
+.hero-banner{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-auto-rows: auto;
+    grid-gap: 3rem;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0rem 2rem 0rem;
+    width:80%;
+    margin: 0 auto;
+  }
 
-.hero-banner-text{
+/* .hero-banner-text{
     width:40% ;
-}
+} */
 .hero-img{
     align-content: flex-start;
     width:20%
 }
 
-.mid-section{
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-    /* justify-content: space-between; */
-    align-items: center;
-    border-top: 1px solid #DCD8EE;
-    padding: 2rem 5rem 2rem 0rem;
-    border-bottom: 1px solid #DCD8EE;
-    
-}
-.mid-section-img{
-    width:60%;
-}
+
 
 .project-section{
     width:80%;
-    margin: 0 auto;;
+    margin: 0 auto;
     padding: 2rem 0rem 2rem 0rem;
 }
 
