--- a/src/components/ProgramCard/ProgramCard.css
+++ b/src/components/ProgramCard/ProgramCard.css
@@ -8,8 +8,16 @@
     height: 300px;
     object-fit: cover;
 } */
-
-
+p{
+  font-size: 16px;
+  color: black;
+}
+.title{
+    font-size: 16px;
+    font-weight: bold;
+    color: black;
+  
+}
 .project-card {
     
     /* width: 100%; */
@@ -87,6 +95,7 @@
   }
   .description{
     font-size: 16px;
+    color: black;
   }
  
   .location{
