--- a/src/components/ReportCard/ReportCard.css
+++ b/src/components/ReportCard/ReportCard.css
@@ -12,9 +12,9 @@
 
 .info-card-wrapper{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     grid-auto-rows: auto;
-    grid-gap: 1.5rem;
+    grid-gap: 1rem;
     justify-content: center;
     align-items: center;
     padding: 2rem 0rem 2rem 0rem;
@@ -23,7 +23,7 @@
 
 }
 
-.card1-wrapper, .card2-wrapper, .card3-wrapper{
+.card1-wrapper, .card2-wrapper, .card3-wrapper, .card4-wrapper{
     background-color: lightpink;
     border-radius: 6px;
     padding: 2rem 2rem 2rem 2rem;
