--- a/src/components/ReportCard/ReportCard.css
+++ b/src/components/ReportCard/ReportCard.css
@@ -6,12 +6,14 @@
 .card-text-label{
     font-size: 14px;
     font-weight:bold;
-    color:black
+    color:black;
+    margin: 10px 0;
 }
 
 .card-content{
     display: grid;
     width: 70%;
+    padding-left: 4rem;
    
 }
 .info-card-wrapper{
@@ -27,21 +29,22 @@
 
 }
 
-.first-row-wrapper{
+/* .first-row-wrapper{
     display: flex;
     flex-direction: row;
     
-}
+} */
 .card1-wrapper, .card2-wrapper, .card3-wrapper, .card4-wrapper{
-    display: grid;
-    /* height: 100%; */
+    /* display: grid; */
+    height: 100%;
     grid-auto-rows: auto auto 1fr auto;
     grid-gap:0.5rem;
-    background-color: lightpink;
     border-radius: 6px;
-    padding: 1rem 1rem 1rem 1rem;
 }
 
+.inner-wrapper{
+    margin: 10px;
+}
 .card1-wrapper{
     background-color: #e8dff5;
     border:solid #ddcaf7 ;
