--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,11 +6,14 @@
     align-items: flex-end;
     padding: 1rem 1.5em 1rem 1.5rem;
 
-};
+}
+
 .left-nav{
-    display:flex;;  
+    display:flex;
+    justify-content: space-between;
     align-items: center;
     gap: 0.5rem;
+    border: 1px solid red;
 }
 
 .login-btn{
