--- a/src/components/ProgramCard/ProgramCard.css
+++ b/src/components/ProgramCard/ProgramCard.css
@@ -24,7 +24,7 @@ p{
     overflow: hidden;
     border-radius: 8px;
     /* border: 1px solid black; */
-    box-shadow: 0px 0px 5px gray;
+    box-shadow: 0px 0px 3px #c3b6b6;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
