--- a/src/components/StudentForm/StudentForm.css
+++ b/src/components/StudentForm/StudentForm.css
@@ -1,11 +1,22 @@
-
-
-
-label {
-    padding: 0.5rem 1rem;
-    text-decoration: underline;
-    font: bolder;
+.form-wrap {
+    display: flex;
+    align-items: flex-end;
+    margin: 0% 10% 7% 2%;
+    padding: 0% 1% 3% 2%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
 }
+.button-wrap {
+    display: flex;
+    margin: -10% 5% 0% 8%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
+    
+}
+
 
 .login-button{
     padding: 0.5rem 1rem;
@@ -18,23 +29,21 @@ label {
     border-color: purple;
 }
 
-.submit-btn {
+.student-btn{ 
     
-    /* padding: 0.5rem 1rem; */
-    /* font-size: 1.25rem; */
-    line-height: 1.5;
-    border-radius: 100px;
-    border-color: purple;
-
-}
-.text-input{
-    display: flex;
-    padding: 0.5rem 1rem;
-    /* font-size: 1.25rem; */
-    margin: 0.5rem 1rem;
-
-    /* line-height: 1.5; */
-    border-radius: 10px;
-    border-color: purple;
+    padding: 2px 7px;
+    margin: 3px;
+    border-width: 1px;
+    border-style: outset;
+    border-radius: 4px;
+    font-size: 12px;
+    background-color: #8246AF;
+    color: white;   
+    border: 1px solid #1a1919;
 }
 
+.student-btn:hover  {
+
+    color: #8246AF;
+    background-color: #d4a9f5;
+}
